Fix categories alignment proble

--- a/src/app/(pages)/[slug]/index.module.scss
+++ b/src/app/(pages)/[slug]/index.module.scss
@@ -1,6 +1,5 @@
 @import '../../_css/queries.scss';
 
-
 .home {
   display: flex;
   flex-direction: column;
@@ -8,6 +7,6 @@
   margin-top: 100px;
 
   @include mid-break {
-    gap: 60px
+    gap: 60px;
   }
 }
